# despot

./: CMakeLists.txt
examples/cpp_models/cooperative_minefield/: CMakeLists.txt  Makefile
examples/cpp_models/cooperative_minefield/src/base/: base_cooperative_minefield.cpp  base_cooperative_minefield.h
examples/cpp_models/cooperative_minefield/src/cooperative_minefield/: cooperative_minefield.cpp  cooperative_minefield.h  main.cpp
examples/cpp_models/mdp_minefield/: CMakeLists.txt  Makefile
examples/cpp_models/mdp_minefield/src/: main.cpp  mdp_minefield.cpp  mdp_minefield.h
examples/cpp_models/simple_cooperative_rock_sample/: CMakeLists.txt  Makefile
examples/cpp_models/simple_cooperative_rock_sample/src/: main.cpp  simple_cooperative_rock_sample.cpp  simple_cooperative_rock_sample.h
include/despot/core/: policy.h
unit_tests/: CMakeLists.txt
